--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lodash": "~2.4.1",
     "mongoose": "~3.8.8",
     "request": "~2.27.0",
-    "time-grunt": "~0.1.2"
+    "time-grunt": "~0.1.2",
+    "passport-local-mongoose": "~0.3.0",
+    "passport": "~0.2.0"
   },
   "devDependencies": {},
   "scripts": {
