--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "request": "~2.27.0",
     "time-grunt": "~0.1.2",
     "passport-local-mongoose": "~0.3.0",
-    "passport": "~0.2.0"
+    "passport": "~0.2.0",
+    "node-mailer": "~0.1.1"
   },
   "devDependencies": {},
   "scripts": {
